--- a/fr-user-microservice/pom.xml
+++ b/fr-user-microservice/pom.xml
@@ -18,7 +18,10 @@
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
-		
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
